// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`deleteEmbeddedListRows issues a DELETE WHERE fk = $1 for embeddable list 1`] = `
{
  "params": [
    "e1",
  ],
  "sql": "DELETE FROM "article_tag_objects" WHERE "article_id" = $1",
}
`;

exports[`deleteEmbeddedListRows issues a DELETE WHERE fk = $1 for primitive list 1`] = `
{
  "params": [
    "e1",
  ],
  "sql": "DELETE FROM "article_tags" WHERE "article_id" = $1",
}
`;

exports[`deleteEmbeddedListRows uses qualified table name when namespace is provided 1`] = `
{
  "params": [
    "e1",
  ],
  "sql": "DELETE FROM "myschema"."article_tags" WHERE "article_id" = $1",
}
`;

exports[`insertEmbeddedListRows embeddable element insertion applies transform.to() on embeddable field values when transform is defined 1`] = `
{
  "params": [
    "e1",
    0,
    "encoded:hello",
    5,
  ],
  "sql": "INSERT INTO "transformed_tags" ("article_id", "__ordinal", "label", "score") VALUES ($1, $2, $3, $4)",
}
`;

exports[`insertEmbeddedListRows embeddable element insertion generates correct SQL for a single embeddable element 1`] = `
{
  "params": [
    "e1",
    0,
    "important",
    42,
  ],
  "sql": "INSERT INTO "article_tag_objects" ("article_id", "__ordinal", "label", "score") VALUES ($1, $2, $3, $4)",
}
`;

exports[`insertEmbeddedListRows embeddable element insertion generates correct SQL for multiple embeddable elements with correct ordinals 1`] = `
{
  "params": [
    "e1",
    0,
    "first",
    1,
    "e1",
    1,
    "second",
    2,
  ],
  "sql": "INSERT INTO "article_tag_objects" ("article_id", "__ordinal", "label", "score") VALUES ($1, $2, $3, $4), ($5, $6, $7, $8)",
}
`;

exports[`insertEmbeddedListRows embeddable element insertion handles null element object — field values become null 1`] = `
{
  "params": [
    "e1",
    0,
    null,
    null,
  ],
  "sql": "INSERT INTO "article_tag_objects" ("article_id", "__ordinal", "label", "score") VALUES ($1, $2, $3, $4)",
}
`;

exports[`insertEmbeddedListRows embeddable element insertion uses qualified table name for embeddable list with namespace 1`] = `
{
  "params": [
    "e1",
    0,
    "x",
    0,
  ],
  "sql": "INSERT INTO "app"."article_tag_objects" ("article_id", "__ordinal", "label", "score") VALUES ($1, $2, $3, $4)",
}
`;

exports[`insertEmbeddedListRows primitive element insertion generates correct SQL for a single primitive element 1`] = `
{
  "params": [
    "e1",
    0,
    "alpha",
  ],
  "sql": "INSERT INTO "article_tags" ("article_id", "__ordinal", "value") VALUES ($1, $2, $3)",
}
`;

exports[`insertEmbeddedListRows primitive element insertion generates correct SQL for multiple primitive elements 1`] = `
{
  "params": [
    "e1",
    0,
    "alpha",
    "e1",
    1,
    "beta",
    "e1",
    2,
    "gamma",
  ],
  "sql": "INSERT INTO "article_tags" ("article_id", "__ordinal", "value") VALUES ($1, $2, $3), ($4, $5, $6), ($7, $8, $9)",
}
`;

exports[`insertEmbeddedListRows primitive element insertion handles null primitive element values 1`] = `
{
  "params": [
    "e1",
    0,
    null,
    "e1",
    1,
    "valid",
  ],
  "sql": "INSERT INTO "article_tags" ("article_id", "__ordinal", "value") VALUES ($1, $2, $3), ($4, $5, $6)",
}
`;

exports[`insertEmbeddedListRows primitive element insertion uses qualified table name when namespace is provided 1`] = `
{
  "params": [
    "e1",
    0,
    "x",
  ],
  "sql": "INSERT INTO "myschema"."article_tags" ("article_id", "__ordinal", "value") VALUES ($1, $2, $3)",
}
`;

exports[`loadEmbeddedListRows SQL generation issues SELECT with WHERE fk = $1 and ORDER BY __ordinal 1`] = `
{
  "params": [
    "e1",
  ],
  "sql": "SELECT * FROM "article_tags" WHERE "article_id" = $1 ORDER BY "__ordinal"",
}
`;

exports[`loadEmbeddedListRows SQL generation uses qualified table name when namespace is provided 1`] = `
{
  "params": [
    "e1",
  ],
  "sql": "SELECT * FROM "myschema"."article_tags" WHERE "article_id" = $1 ORDER BY "__ordinal"",
}
`;

exports[`loadEmbeddedListRows embeddable element hydration creates class instances and maps field values 1`] = `
[
  TagEmbeddable {
    "label": "important",
    "score": 10,
  },
  TagEmbeddable {
    "label": "critical",
    "score": 99,
  },
]
`;

exports[`loadEmbeddedListRows embeddable element hydration snapshot for a single hydrated embeddable row 1`] = `
[
  TagEmbeddable {
    "label": "snap-label",
    "score": 77,
  },
]
`;

exports[`loadEmbeddedListRows primitive element hydration extracts value column from each row and assigns to entity 1`] = `
[
  "alpha",
  "beta",
]
`;

exports[`loadEmbeddedListRows primitive element hydration passes null values through without deserialising 1`] = `
[
  null,
]
`;

exports[`loadEmbeddedListRows primitive element hydration passes undefined values through without deserialising 1`] = `
[
  undefined,
]
`;

exports[`loadEmbeddedListRows primitive element hydration returns raw value when elementType is null 1`] = `
[
  "raw-string",
]
`;

exports[`loadEmbeddedListRowsBatch SQL generation passes all pk values as a single array parameter 1`] = `
[
  [
    "a1",
    "b2",
    "c3",
  ],
]
`;

exports[`loadEmbeddedListRowsBatch SQL generation uses qualified table name with namespace 1`] = `"SELECT * FROM "myschema"."article_tags" WHERE "article_id" = ANY($1) ORDER BY "__ordinal""`;

exports[`loadEmbeddedListRowsBatch embeddable element distribution hydrates embeddable instances and distributes them to the correct entity 1`] = `
[
  TagEmbeddable {
    "label": "important",
    "score": 10,
  },
  TagEmbeddable {
    "label": "critical",
    "score": 99,
  },
]
`;

exports[`loadEmbeddedListRowsBatch embeddable element distribution hydrates embeddable instances and distributes them to the correct entity 2`] = `
[
  TagEmbeddable {
    "label": "minor",
    "score": 2,
  },
]
`;

exports[`loadEmbeddedListRowsBatch primitive element distribution distributes primitive rows to the correct entity by fk value 1`] = `
[
  "alpha",
  "beta",
]
`;

exports[`loadEmbeddedListRowsBatch primitive element distribution distributes primitive rows to the correct entity by fk value 2`] = `
[
  "gamma",
]
`;

exports[`loadEmbeddedListRowsBatch snapshot: complete batch result full batch distribution with mixed rows matches snapshot 1`] = `
[
  {
    "id": "u1",
    "tags": [
      "a",
      "b",
    ],
  },
  {
    "id": "u2",
    "tags": [
      "x",
      "y",
    ],
  },
  {
    "id": "u3",
    "tags": [
      "c",
    ],
  },
]
`;

exports[`saveEmbeddedListRows executes DELETE then INSERT for embeddable elements 1`] = `
[
  {
    "params": [
      "e1",
    ],
    "sql": "DELETE FROM "article_tag_objects" WHERE "article_id" = $1",
  },
  {
    "params": [
      "e1",
      0,
      "x",
      1,
    ],
    "sql": "INSERT INTO "article_tag_objects" ("article_id", "__ordinal", "label", "score") VALUES ($1, $2, $3, $4)",
  },
]
`;

exports[`saveEmbeddedListRows executes DELETE then INSERT for primitive elements 1`] = `
[
  {
    "params": [
      "e1",
    ],
    "sql": "DELETE FROM "article_tags" WHERE "article_id" = $1",
  },
  {
    "params": [
      "e1",
      0,
      "alpha",
      "e1",
      1,
      "beta",
    ],
    "sql": "INSERT INTO "article_tags" ("article_id", "__ordinal", "value") VALUES ($1, $2, $3), ($4, $5, $6)",
  },
]
`;

exports[`saveEmbeddedListRows snapshot for full save cycle with multiple primitive items 1`] = `
[
  {
    "params": [
      "snap-pk",
    ],
    "sql": "DELETE FROM "article_tags" WHERE "article_id" = $1",
  },
  {
    "params": [
      "snap-pk",
      0,
      "a",
      "snap-pk",
      1,
      "b",
      "snap-pk",
      2,
      "c",
    ],
    "sql": "INSERT INTO "article_tags" ("article_id", "__ordinal", "value") VALUES ($1, $2, $3), ($4, $5, $6), ($7, $8, $9)",
  },
]
`;
